Fixed scrollBar premi

--- a/src/main/webapp/css/premi.css
+++ b/src/main/webapp/css/premi.css
@@ -23,6 +23,10 @@ html, body{
 }
 
 
+
+body::-webkit-scrollbar{
+    display: none;
+}
 /* Create two equal columns that floats next to each other */
 #content, #navbar {
     float: left;
